# AoC-2021-Pico

./: README.md  build  run
day1/: CMakeLists.txt  day1.cpp
day10/: CMakeLists.txt  day10.cpp
day11/: CMakeLists.txt  day11.cpp
day12/: CMakeLists.txt  day12.cpp
day13/: CMakeLists.txt  day13.cpp
day14/: CMakeLists.txt  day14.cpp
day15/: CMakeLists.txt  day15.cpp
day16/: CMakeLists.txt  day16.cpp
day17/: CMakeLists.txt  day17.cpp
day18/: CMakeLists.txt  day18.cpp
day19/: CMakeLists.txt  day19.cpp
day2/: CMakeLists.txt  day2.cpp
day20/: CMakeLists.txt  day20.cpp
day21/: CMakeLists.txt  day21.cpp
day22/: CMakeLists.txt  day22.cpp
day23/: CMakeLists.txt  day23.cpp
day24/: CMakeLists.txt  day24.cpp
day25/: CMakeLists.txt  day25.cpp
day3/: CMakeLists.txt  day3.cpp
day4/: CMakeLists.txt  day4.cpp
day5/: CMakeLists.txt  day5.cpp
day6/: CMakeLists.txt  day6.cpp
day7/: CMakeLists.txt  day7.cpp
day8/: CMakeLists.txt  day8.cpp
day9/: CMakeLists.txt  day9.cpp
