cmake_minimum_required(VERSION 3.13)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(day1 C CXX ASM)
pico_sdk_init()
add_executable(day1 day1.cpp)
pico_set_program_name(day1 "day1")
pico_enable_stdio_uart(day1 1)
pico_enable_stdio_usb(day1 0)
target_link_libraries(day1 pico_stdlib)
pico_add_extra_outputs(day1)
