cmake_minimum_required(VERSION 3.13)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
pico_sdk_init()
project(day12 C CXX ASM)
add_executable(day12 day12.cpp)
pico_set_program_name(day12 "day12")
pico_enable_stdio_uart(day12 1)
pico_enable_stdio_usb(day12 0)
target_link_libraries(day12 pico_stdlib)
pico_add_extra_outputs(day12)
