cmake_minimum_required(VERSION 3.13)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(day6 C CXX ASM)
pico_sdk_init()
add_executable(day6 day6.cpp)
pico_set_program_name(day6 "day6")
pico_enable_stdio_uart(day6 1)
pico_enable_stdio_usb(day6 0)
target_link_libraries(day6 pico_stdlib)
pico_add_extra_outputs(day6)
