cmake_minimum_required(VERSION 3.13)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
pico_sdk_init()
project(day7 C CXX ASM)
add_executable(day7 day7.cpp)
pico_set_program_name(day7 "day7")
pico_enable_stdio_uart(day7 1)
pico_enable_stdio_usb(day7 0)
target_link_libraries(day7 pico_stdlib)
pico_add_extra_outputs(day7)
