cmake_minimum_required(VERSION 3.13)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
pico_sdk_init()
project(day9 C CXX ASM)
add_executable(day9 day9.cpp)
pico_set_program_name(day9 "day9")
pico_enable_stdio_uart(day9 1)
pico_enable_stdio_usb(day9 0)
target_link_libraries(day9 pico_stdlib)
pico_add_extra_outputs(day9)
